--- a/so.css
+++ b/so.css
@@ -12,19 +12,19 @@
 .hand.nosel.fl.uzr.border, .hand.nosel.fl.uzr.border {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;}
 .uzr.fl.corner.borderg.mm, .uzr.fl.corner.borderg.mm {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;}
 .label.tc.border.btn.fl, .label.tc.border.btn.fl {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;}
-ul.nav.nav-tabs.fl li a:hover {background-color: #108378;color: white;}
-ul.nav.nav-tabs.fl li {width: 33.3%;border-top: 2px solid #108378;border-radius: 15px 15px 0px 0px;background-color: #FFFFFF;border-bottom: 3px solid #108378;}
+ul.nav.nav-tabs.fl li a:hover {background-color: #c86184;color: white;}
+ul.nav.nav-tabs.fl li {width: 33.3%;border-top: 2px solid #c86184;border-radius: 15px 15px 0px 0px;background-color: #FFFFFF;border-bottom: 3px solid #c86184;}
 ul.nav.nav-tabs.fl li a {font-family: 'jazeera',FontAwesome;font-size: 13px!important;padding: 6px!important;text-align: center!important;border-radius: 15px 15px 0px 0px;width: 100%;color: #32d3c3;}
 
 div#tlogins {
-    border: 2px solid #31d4c4;
+    border: 2px solid #c86184;
     border-radius: 20px 20px 0px 0px;
 }
 a.label.label-primary.fl {
     height: 35px;
     border-radius: 0px 0px 0px 0px!important;
     padding: 8px!important;
-    border: 2px solid #149e90;
+    border: 2px solid #c86184;
 }
 a.label.label-primary.fl img.fl {
     margin-top: -3px;
@@ -34,7 +34,7 @@ a.label.label-primary.fl {
     height: 40px;
     border-radius: 0px 0px 0px 0px!important;
     padding: 8px!important;
-    border: 2px solid #149e90;
+    border: 2px solid #c86184;
 }
 .sultan9 {height: 30px;width: 22%; margin: 2px;}
 .sultan11 {
