--- a/so.css
+++ b/so.css
@@ -1,51 +1,52 @@
 .ae.fa.label.label-primary.fa-user{
-width: 17px;
+width: 250px;
 }
 #sultan10{
+    width: 250px;
     border-top: 3px solid #F7F7F7;
     border-bottom: 3px solid #F7F7F7;
     margin-bottom: 3px;
     border-radius: 15px;
 }
-.s1.fa.fa-user.label.badgex.label-as-badge.label-success {background-color: #c86184!important;}
-.fr.borderg, .fr.borderg {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 0px 0px 15px 15px;}
-.label-primary.mini.fl, .border-radius {border: 2px solid #;font-family: 'jazeera',FontAwesome;border-radius: 0px 0px 15px 15px;}
-.room.borderg.hand.nosel.fl, .border-radius {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;}
+.s1.fa.fa-user.label.badgex.label-as-badge.label-success {background-color: #c86184!important;width: 250px;}
+.fr.borderg, .fr.borderg {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 0px 0px 15px 15px;width: 250px;}
+.label-primary.mini.fl, .border-radius {border: 2px solid #;font-family: 'jazeera',FontAwesome;border-radius: 0px 0px 15px 15px;width: 250px;width: 250px;}
+.room.borderg.hand.nosel.fl, .border-radius {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;width: 250px;}
 .btn-sm, .btn-sm {border: 1px solid #28bbad;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;}
-.hand.nosel.fl.uzr.border, .hand.nosel.fl.uzr.border {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;}
-.uzr.fl.corner.borderg.mm, .uzr.fl.corner.borderg.mm {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;}
-.label.tc.border.btn.fl, .label.tc.border.btn.fl {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;}
+.hand.nosel.fl.uzr.border, .hand.nosel.fl.uzr.border {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;width: 250px;}
+.uzr.fl.corner.borderg.mm, .uzr.fl.corner.borderg.mm {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;width: 250px;}
+.label.tc.border.btn.fl, .label.tc.border.btn.fl {border: 1px solid #c86184;font-family: 'jazeera',FontAwesome;border-radius: 15px 0px 15px 0px;width: 250px;}
 ul.nav.nav-tabs.fl li a:hover {background-color: #c86184;color: white;}
-ul.nav.nav-tabs.fl li {width: 33.3%;border-top: 2px solid #c86184;border-radius: 15px 15px 0px 0px;background-color: #FFFFFF;border-bottom: 3px solid #c86184;}
-ul.nav.nav-tabs.fl li a {font-family: 'jazeera',FontAwesome;font-size: 13px!important;padding: 6px!important;text-align: center!important;border-radius: 15px 15px 0px 0px;width: 100%;color: #32d3c3;}
+ul.nav.nav-tabs.fl li {width: 33.3%;border-top: 2px solid #c86184;border-radius: 15px 15px 0px 0px;background-color: #FFFFFF;border-bottom: 3px solid #c86184;width: 250px;}
+ul.nav.nav-tabs.fl li a {font-family: 'jazeera',FontAwesome;font-size: 13px!important;padding: 6px!important;text-align: center!important;border-radius: 15px 15px 0px 0px;width: 100%;color: #32d3c3;width: 250px;}
 
 div#tlogins {
     border: 2px solid #c86184;
     border-radius: 20px 20px 0px 0px;
-}
+width: 250px;}
 a.label.label-primary.fl {
     height: 35px;
     border-radius: 0px 0px 0px 0px!important;
     padding: 8px!important;
     border: 2px solid #c86184;
-}
+width: 250px;}
 a.label.label-primary.fl img.fl {
     margin-top: -3px;
     border-radius: 10px 0px;
-}
+width: 250px;}
 a.label.label-primary.fl {
     height: 40px;
     border-radius: 0px 0px 0px 0px!important;
     padding: 8px!important;
     border: 2px solid #c86184;
-}
-.sultan9 {height: 30px;width: 22%; margin: 2px;}
+width: 250px;}
+.sultan9 {height: 30px;width: 22%; margin: 2px;width: 250px;}
 .sultan11 {
 background-color: #fff;
 border-radius: 15px 15px 15px 15px;
 font-family: 'jazeera',FontAwesome;
 padding: 2px 10px 2px 10px; margin:7px 10px 7px 10px;
-    
+width: 250px;    
 }
 #sultan8 {
     margin-bottom: 2px;
@@ -57,7 +58,7 @@ padding: 2px 10px 2px 10px; margin:7px 10px 7px 10px;
     border-bottom: 2px solid #c86184;
     border-top: 2px solid #c86184;
     padding-bottom: 2px!important;
-}
+width: 250px;}
 
 
 label.fl.label.loginstat.label-success {
@@ -66,10 +67,10 @@ label.fl.label.loginstat.label-success {
     height: 23px;
     float: initial;
     display: inline-flex;
-}
+width: 250px;}
 .lonline.light.break .hand.nosel.fl.uzr.border .fl .fl .fl span.corner.u-topic.dots {
     border-radius: 0px 0px 15px 15px!important;
-}
+width: 250px;}
 button.btn.fr.btn-success.fa.fa-refresh {
 padding: 4px 5px;
 background-color: #c86184!important;
@@ -77,7 +78,7 @@ background-image: none;
 border: 2px solid transparent;
 margin-top: -22px!important;
 border-radius: 50px;
-}
+width: 250px;}
 #sultanm1 {
     background-color: #dc2c2c;
     color: white;
@@ -88,7 +89,7 @@ border-radius: 50px;
     padding-bottom: 2px;
     font-family: 'jazeera',FontAwesome;
     margin: 4px;
-}
+width: 250px;}
 #sultanm2 {
     color: white;
     background-color: rgb(12, 12, 14);
@@ -96,18 +97,18 @@ border-radius: 50px;
     padding-right: 10px;
     padding-left: 5px;
     border-radius: 0px 15px;
-    border: 1px solid #ff0000;
+    border: 91px solid #ff0000;
     margin: 10px;
-}
-.sultan9 {height: 30px;width: 22%; margin: 2px;}
+width: 250px;}
+.sultan9 {height: 30px;width: 22%; margin: 2px;width: 250px;}
 .sultan11 {
 background-color: #fff;
 border-radius: 15px 15px 15px 15px;
 font-family: 'jazeera',FontAwesome;
 padding: 2px 10px 2px 10px; margin:7px 10px 7px 10px;
-    
+ width: 250px;   
 }
-#sultan5{margin-left: 8%;margin-bottom: 2px;font-family: 'jazeera-light',FontAwesome;background-color: rgb(255, 235, 247);margin-top: -5px;height: 24px;color: #c10c6b;text-shadow: 2px 0px 8px rgba(243, 8, 144, 0.32) , 0px 2px 10px #fff !important;border-radius: 5px 5px 5px 5px;}
+#sultan5{margin-left: 8%;margin-bottom: 2px;font-family: 'jazeera-light',FontAwesome;background-color: rgb(255, 235, 247);margin-top: -5px;height: 24px;color: #c10c6b;text-shadow: 2px 0px 8px rgba(243, 8, 144, 0.32) , 0px 2px 10px #fff !important;border-radius: 5px 5px 5px 5px;width: 250px;}
 #sultan25 {
     margin-left: 2px;
     margin-bottom: -4px;
@@ -118,30 +119,30 @@ padding: 2px 10px 2px 10px; margin:7px 10px 7px 10px;
     color: #c86184;
     text-shadow: 2px 0px 8px rgba(19, 18, 18, 0.32) , 0px 2px 10px #fff !important;
     border-radius: 5px 5px 5px 5px;
-}
+width: 250px;}
 div#tlogins .fr.borderg {
     font-size: 10px!important;
-}
+width: 250px;}
 div#tlogins .fr.borderg a {
     font-size: 10px!important;
-}
+width: 250px;}
 
-.sultan9 {height: 30px;width: 22%; margin: 2px;}
+.sultan9 {height: 30px;width: 22%; margin: 2px;width: 250px;}
 .sultan111 {
 font-family: 'jazeera',FontAwesome;
-}
+width: 250px;}
   
-div#l1  input#u1 {border-radius: 15px 15px 0px 0px;border: 1px solid #e1e0e0;width: 99%;margin-top: 3px;margin-left:1px;text-align: center;font-family: 'jazeera-light',FontAwesome;}
-div#l1 button {border-radius: 0px 0px 15px 15px;width: 99%;height: 30px;}
-div#l3 button {border-radius: 15px;width: 99%;height: 30px;margin-left:1px;}
-div#l2 button {border-radius: 15px;width: 70%;height: 30px;}
-div#l2 input#pass1, div#l2 input#u2, div#l3 input#pass2, div#l3 input#u3{width: 49%;padding: 0px!important;float: right;margin: 2px 5px 2px 0px;;text-align: center;font-family: 'jazeera-light',FontAwesome;}
-div#l2 input#u2, div#l3 input#u3{margin-left: -6px;border-radius: 0px 15px 15px 0px;border: 1px solid #e1e0e0;}
-div#l2 input#pass1, div#l3 input#pass2 {border-radius: 15px 0px 0px 15px;border: 1px solid #e1e0e0;}
-div#l2 , div#l3 {padding: 2px!important;}
-div#l1 {height: 80px;margin: 0px 1px -18px 1px;padding: 0px!important;}
-div#l3 br , div#l2 br {display: none;}
-div#l2 ,div#l3, div#l1 {
+div#l1  input#u1 {border-radius: 15px 15px 0px 0px;border: 1px solid #e1e0e0;width: 99%;margin-top: 3px;margin-left:1px;text-align: center;font-family: 'jazeera-light',FontAwesome;width: 250px;}
+div#l1 button {border-radius: 0px 0px 15px 15px;width: 99%;height: 30px;width: 250px;}
+div#l3 button {border-radius: 15px;width: 99%;height: 30px;margin-left:1px;width: 250px;}
+div#l2 button {border-radius: 15px;width: 70%;height: 30px;width: 250px;}
+div#l2 input#pass1, div#l2 input#u2, div#l3 input#pass2, div#l3 input#u3{width: 49%;padding: 0px!important;float: right;margin: 2px 5px 2px 0px;;text-align: center;font-family: 'jazeera-light',FontAwesome;width: 250px;}
+div#l2 input#u2, div#l3 input#u3{margin-left: -6px;border-radius: 0px 15px 15px 0px;border: 1px solid #e1e0e0;width: 250px;}
+div#l2 input#pass1, div#l3 input#pass2 {border-radius: 15px 0px 0px 15px;border: 1px solid #e1e0e0;width: 250px;}
+div#l2 , div#l3 {padding: 2px!important;width: 250px;}
+div#l1 {height: 80px;margin: 0px 1px -18px 1px;padding: 0px!important;width: 250px;}
+div#l3 br , div#l2 br {display: none;width: 250px;}
+div#l2 ,div#l3, div#l1 {width: 250px;
     border-bottom: 2px solid;
     margin-bottom: 2px;
     border-top: 0px solid;
@@ -154,7 +155,7 @@ div#l2 ,div#l3, div#l1 {
 
 }
 
-img.fitimg.fl.u-pic {
+img.fitimg.fl.u-pic {width: 250px;
     border-radius: 15px 0;
     border: 1.5px solid #5b5959;
     background-size: cover;
@@ -164,16 +165,16 @@ img.fitimg.fl.u-pic {
 }
 label.fl.label.loginstat.label-success, .fr.borderg, .label.label.label-primary.mini.fl {
     margin-top: 5px;
-  }
+ width: 250px; }
   .room.borderg.hand.nosel.fl img.fl.u-pic {
     border-radius: 15px 15px 15px 15px;
-  }
+width: 250px;  }
   .sultan111, div#d2 {
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url();
     background-color: #ffffff;
-  }
+width: 250px;  }
   .lonline.light.break{background-image: url();background-size: inherit;border-top:5px groove #c86184;padding-top:5px}
   .sultan111,div#d2{background-repeat: no-repeat;background-size: contain;background-image: url();background-color:#ffffff}a.label.label-primary.fl{height:35px;border-radius:19px 19px 0 0!important;padding:8px!important;border:2px solid #E4A4BC}
 }
@@ -190,7 +191,7 @@ label.fl.label.loginstat.label-success {
 }
 .fl.label.loginstat.label-success, .fl.label.loginstat.label-info {
     color: #c86184;
-    border: 1px solid #E4A4BC;
+    border: 91px solid #E4A4BC;
     border-radius: 5px 5px 5px 5px;
     margin-top: 1px;
     background-color: #FFFFFF!important;
@@ -208,7 +209,7 @@ label.fl.label.loginstat.label-success {
 }
 
 img.fitimg.fl.u-pic {
-    border: 1px solid #c86184;
+    border: 71px solid #c86184;
     border-radius: 19px;
 }
 label.label.tc.border.btn.fl {
@@ -218,7 +219,7 @@ label.label.tc.border.btn.fl {
     border-radius: 15px 15px 15px 15px;
 }
 .label.tc.border.btn.fl, .label.tc.border.btn.fl {
-    border: 1px solid #E4A4BC;
+    border: 81px solid #E4A4BC;
     border-radius: 5px 5px 5px 5px;
 }
 label.tc {
@@ -231,19 +232,19 @@ body, .nosel.fl.bg, .tablebox.footer.fl.light, .break.fr {
     color: #AD2856;
 }
 .hand.nosel.fl.uzr.border {
-    border-right: 1px solid #d0046f;
-    border-left: 1px solid #d0046f;
+    border-right: 91px solid #d0046f;
+    border-left: 61px solid #d0046f;
     border-radius: 15px;
     margin: 2px;
     margin-top: 2px;
     margin-left: 2px;
 }
 .hand.nosel.fl.uzr.border, .hand.nosel.fl.uzr.border {
-    border: 1px solid #FFE0F6;
+    border: 71px solid #FFE0F6;
     border-radius: 5px 5px 5px 5px;
 }
 .hand.nosel.fl.uzr.border, .hand.nosel.fl.uzr.border {
-    border: 1px solid #FFE0F6;
+    border: 61px solid #FFE0F6;
     font-family: 'jazeera',FontAwesome;
     border-radius: 5px 5px 10px 10px;
 }
@@ -251,7 +252,7 @@ body, .nosel.fl.bg, .tablebox.footer.fl.light, .break.fr {
 element.style {
     text-align: left;
     background-color: white;
-    width: 99%;
+    width: 199%;
     padding: 2px 1px 1px;
     border-radius: 10px;
     margin: 1px 0px;
